--- a/index.html
+++ b/index.html
@@ -18,18 +18,14 @@
                 <h5>Click on a button to show related gif for chosen movie or add a disney movie of your choice. Enjoy!</h5>
             </p>
         </div>
-        <div class="row">
-            <div class="col-md-10" id="buttons"></div>
-        </div>
+        <div class="row" id="buttons"></div>
+        <br>
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
                     <form class="form-inline">
-                            <div class="form-group mx-sm-3 mb-2">
-                                <label for="input-text" class="sr-only">Password</label>
-                                <input type="text" class="form-control" id="input-text" placeholder="Add new movie">
-                            </div>
-                            <button type="submit" class="btn btn-primary mb-2">Add Movie</button>
+                        <input type="text" class="form-control mb-2" id="input-text" placeholder="Add new movie">
+                        <button type="submit" class="btn btn-primary mb-2 mx-sm-2" id="add-movie">Add Movie</button>
                     </form>
                 </div>
             </div>
