--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/main.js"></script>
 </head>
@@ -15,7 +16,7 @@
         <div class="jumbotron center">
             <h1>Disney Movies GifTastic!</h1>
             <p>
-                <h5>Click on a button to show related gif for chosen movie or add a disney movie of your choice. Enjoy!</h5>
+                <h5>Click on a button to show related gif for chosen movie or add a disney movie of your choice. Then, click on an image. Enjoy!</h5>
             </p>
         </div>
         <div class="row" id="buttons"></div>
@@ -30,6 +31,7 @@
                 </div>
             </div>
         </div>
+        <div class="row" id="gifs"></div>
     </div>
 </body>
 </html>
